--- a/FaithConnect/Views/Admin/ManageAccount.cshtml
+++ b/FaithConnect/Views/Admin/ManageAccount.cshtml
@@ -133,7 +133,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Add Account</button>
+                            <button type="submit" class="btn" style="background:rgb(207 185 159); border-color:transparent; color:white; margin-left:12px">Add Account</button>
                         }
                     </div>
                 </div>
