--- a/FaithConnect/Views/Admin/ManageGroups.cshtml
+++ b/FaithConnect/Views/Admin/ManageGroups.cshtml
@@ -50,7 +50,7 @@
                                     <textarea class="form-control" id="description" name="description" placeholder="Description" required></textarea>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Add Group</button>
+                            <button type="submit" class="btn" style="background:rgb(207 185 159); border-color:transparent; color:white; margin-left:12px">Add Group</button>
                         }                        
                     </div>
                 </div>
