--- a/FaithConnect/Views/Admin/AdminDashboard.cshtml
+++ b/FaithConnect/Views/Admin/AdminDashboard.cshtml
@@ -13,9 +13,9 @@
                     <h3 class="fw-bold mb-3">Dashboard</h3>
                 </div>
                 <div class="ms-md-auto py-2 py-md-0">
-                    <a href="~/Admin/Approval" class="btn btn-label-info btn-round me-2">Manage Events</a>
-                    <a href="~/Admin/ManageAccount" class="btn btn-primary btn-round">Manage Account</a>
-                    <a href="/Admin/GenerateAdminReport" target="_blank" class="btn btn-dark" style="border-radius:20px">
+                    <a href="~/Admin/Approval" class="btn btn-round me-2" style="background:rgb(233 219 202); color:#6d6d6d; border-color:transparent">Manage Events</a>
+                    <a href="~/Admin/ManageAccount" class="btn btn-round" style="background:rgb(207 185 159); color:#6d6d6d; border-color:transparent">Manage Account</a>
+                    <a href="/Admin/GenerateAdminReport" target="_blank" class="btn btn-dark" style="border-radius:20px; background:rgb(233 219 202); color:#6d6d6d; border-color:transparent; margin-left:7px">
                         <i class="fas fa-file-pdf"></i> Generate Report
                     </a>
 
@@ -27,7 +27,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-primary bubble-shadow-small">
+                                    <div class="text-center icon-big bubble-shadow-small" style="background:rgb(233 219 202); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-users"></i>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-secondary bubble-shadow-small">
+                                    <div class="icon-big text-center bubble-shadow-small" style="background:rgb(207 185 159); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-users"></i>
                                     </div>
                                 </div>
@@ -65,7 +65,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-info bubble-shadow-small">
+                                    <div class="icon-big text-center icon-info bubble-shadow-small" style="background:rgb(233 219 202); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-user-check"></i>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-primary bubble-shadow-small">
+                                    <div class="icon-big text-center icon-primary bubble-shadow-small" style="background:rgb(207 185 159); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-clipboard-list"></i>
                                     </div>
                                 </div>
@@ -104,7 +104,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-secondary bubble-shadow-small">
+                                    <div class="icon-big text-center icon-secondary bubble-shadow-small" style="background:rgb(233 219 202); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-clipboard-list"></i>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-info bubble-shadow-small">
+                                    <div class="icon-big text-center icon-info bubble-shadow-small" style="background:rgb(207 185 159); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-clipboard-list"></i>
                                     </div>
                                 </div>
@@ -142,7 +142,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-icon">
-                                    <div class="icon-big text-center icon-primary bubble-shadow-small">
+                                    <div class="icon-big text-center icon-primary bubble-shadow-small" style="background:rgb(233 219 202); border-color:transparent; color:white; border-radius:5px">
                                         <i class="fas fa-clipboard-list"></i>
                                     </div>
                                 </div>
